--- a/main_page.html
+++ b/main_page.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+        integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <title>MCC</title>
 </head>
 
@@ -23,10 +23,6 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link" href="#" id="login_link" data-bs-toggle="modal"
-                        data-bs-target="#loginModal">Login</a>
-                    <a class="nav-link" href="#" id="register_link" data-bs-toggle="modal"
-                        data-bs-target="#registerModal">Signup</a>
                     <a class="nav-link" href="#" id="logout_link">Logout</a>
                 </div>
             </div>
@@ -34,91 +30,8 @@
     </nav>
     <!-- NAVBAR end -->
 
-    <!-- Modals start-->
-    <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Login Form</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <form id="login_form">
-                    <div class="modal-body">
-                        <input class="form-control mb-3" type="email" placeholder="email" id="login_email">
-                        <input class="form-control mb-3" type="password" placeholder="password" id="login_password">
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" id="cancel_login_button" class="btn btn-secondary"
-                            data-bs-dismiss="modal">Cancel</button>
-                        <button type="submit" id="login_button" class="btn btn-primary">Login</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-    <!-- Modals end -->
 
-    <div class="modal fade" id="registerModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Register Form</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <form id="register_form">
-                    <div class="modal-body">
-                        <input class="form-control mb-3" type="email" placeholder="email" id="register_email">
-                        <input class="form-control mb-3" type="password" placeholder="password" id="register_password">
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" id="cancel_register_button" class="btn btn-secondary"
-                            data-bs-dismiss="modal">Cancel</button>
-                        <button type="submit" id="register_button" class="btn btn-primary">Register</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
 
-    <div class="container-fluid">
-        <table class="table table-secondary table-hover table-bordered">
-          <thead>
-            <tr>
-              <th scope="col" class="col-1">Time</th>
-              <th scope="col" class="col-1">Station</th>
-              <th scope="col" class="col-1">Registration</th>
-              <th scope="col" class="col-10">Defect</th>
-              <th scope="col" class="text-wrap col-1">S/L inf.</th>
-              <th scope="col" class="col-1">Solved</th>
-              <th scope="col" class="col-1">Reset</th>
-              <th scope="col" class="text-wrap col-1">OCC inf.</th>
-            </tr>
-          </thead>
-          <tbody id="table_data"></tbody>
-        </table>
-      </div>
-    <h1>Cloud Cafe</h1>
-
-    <div class="content">
-
-        <form id="add-cafe-form">
-            <input type="text" name="name" placeholder="Name">
-            <input type="text" name="city" placeholder="City">
-            <button>Add Cafe</button>
-        </form>
-
-        <ul id="cafe-list"></ul>
-
-    </div>
-
-    
-    <script src="./js/init_FB.js"></script>
-    <script src="./js/app.js"></script>
-    <script src="./js/auth.js"></script>
-    <script src="./js/FB_functions.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
-        integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
@@ -127,6 +40,12 @@
         integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
         crossorigin="anonymous"></script>
 
+    <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+    <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+    <script defer src="./js/init_FB.js"></script>
+    <script defer src="./js/main_page.js"></script>
+    <script defer src="./js/FB_functions.js"></script>
 </body>
 
 </html>
