--- a/main_page.html
+++ b/main_page.html
@@ -30,6 +30,8 @@
     </nav>
     <!-- NAVBAR end -->
 
+    <div class="container-fluid bg-dark">fdgd</div>
+
 
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
