--- a/main_page.html
+++ b/main_page.html
@@ -32,6 +32,7 @@
 
     <div class="container-fluid bg-dark text-light">
         <div class="accordion" id="accordionExample">
+
             <div class="accordion-item">
                 <h2 class="accordion-header" id="headingOne">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse"
@@ -51,11 +52,12 @@
                     </div>
                 </div>
             </div>
+
             <div class="accordion-item">
                 <h2 class="accordion-header" id="headingOne">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseTwo">
-                        Accordion Item #1
+                        data-bs-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+                        Accordion Item #2
                     </button>
                 </h2>
                 <div id="collapseTwo" class="accordion-collapse collapse show" aria-labelledby="headingOne"
@@ -70,6 +72,7 @@
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
 
