--- a/main_page.html
+++ b/main_page.html
@@ -30,9 +30,10 @@
     </nav>
     <!-- NAVBAR end -->
 
-    <div class="container-fluid bg-dark text-light">
-        <div class="accordion" id="accordionExample">
+    <div class="container bg-dark text-light">
+        <div id="result"></div>
 
+        <!-- <div class="accordion" id="accordionExample">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="headingOne">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse"
@@ -51,7 +52,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="accordion-item">
                 <h2 class="accordion-header" id="headingOne">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse"
@@ -70,8 +70,7 @@
                     </div>
                 </div>
             </div>
-
-        </div>
+        </div> -->
     </div>
 
 
