--- a/main_page.html
+++ b/main_page.html
@@ -31,7 +31,19 @@
     <!-- NAVBAR end -->
 
     <div class="container bg-dark text-light">
-        <div id="result"></div>
+        <div class="main_section">
+            <table class="table">
+                <thead>
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">First</th>
+                    <th scope="col">Last</th>
+                    <th scope="col">Handle</th>
+                  </tr>
+                </thead>
+                <tbody id="tableBody"></tbody>
+              </table>
+        </div>
 
         <!-- <div class="accordion" id="accordionExample">
             <div class="accordion-item">
