--- a/main_page.html
+++ b/main_page.html
@@ -30,8 +30,22 @@
     </nav>
     <!-- NAVBAR end -->
 
-    <div class="container bg-dark text-light">
-        <div id="result"></div>
+    <div class="container-fluid bg-light text-light">
+        <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <th class="col-1" scope="col">Time</th>
+                    <th class="col-1" scope="col">Position</th>
+                    <th class="col-1" scope="col">Registration</th>
+                    <th scope="col">Delect</th>
+                    <th class="col-1" scope="col">S/L</th>
+                    <th class="col-1" scope="col">OK</th>
+                </tr>
+            </thead>
+            <tbody>
+
+            </tbody>
+        </table>
 
         <!-- <div class="accordion" id="accordionExample">
             <div class="accordion-item">
