--- a/main_page.html
+++ b/main_page.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <style>
+        table,input[type="checkbox"]{
+            width: 1.4em;
+            height: 1.4em;
+        }
+        .fa-trash-o:hover,.fa-pencil{
+            cursor: pointer;
+        }
+    </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
         integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -24,11 +34,61 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link" href="#" id="logout_link">Logout</a>
+                    <a class="nav-link" href="#" id="new_event_link" data-bs-toggle="modal"
+                        data-bs-target="#new_event">New Event</a>
                 </div>
             </div>
         </div>
     </nav>
     <!-- NAVBAR end -->
+
+    <!-- Modals start-->
+    <div class="modal fade" id="new_event" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Login Form</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <form id="new_event_form">
+                    <div class="modal-body">
+                        <div class="row">
+                            <div class="col-4">
+                                <input class="form-control mb-3" type="text" name="time" placeholder="Time">
+                            </div>
+                            <div class="col-4">
+                                <input class="form-control mb-3" type="text" name="position" placeholder="Position">
+                            </div>
+                            <div class="col-4">
+                                <input class="form-control mb-3" type="text" name="registration" placeholder="Registration">
+                            </div>
+                            <div class="col-12">
+                                <input class="form-control mb-3" type="text" name="defect" placeholder="Defect">
+                            </div>
+                            <div class="col-12">
+                                <input class="form-control mb-3" type="text" name="notes" placeholder="Notes">
+                            </div>
+                            <div class="col-6" style="font-size: 1.4rem;">
+                                <input class="form-check-input mb-3" type="checkbox" name="sl" id="sl">
+                                <label class="form-check-label" for="sl">S/L Informed</label>
+                            </div>
+                            <div class="col-6" style="font-size: 1.4rem;">
+                                <input class="form-check-input mb-3" type="checkbox" name="solved" id="solved">
+                                <label class="form-check-label" for="solved">Defect Solved</label>
+                            </div>
+                        </div>                        
+                    </div>
+                    <div class="modal-footer">
+                        <button type="reset" id="clear_new_event_button" class="btn btn-danger">Clear</button>
+                        <button type="reset" id="cancel_new_event_button" class="btn btn-secondary"
+                            data-bs-dismiss="modal">Cancel</button>
+                        <button type="submit" id="save_event_button" class="btn btn-primary">Save</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <!-- Modals end -->
 
     <div class="container-fluid bg-light text-light">
         <table class="table table-bordered">
@@ -37,12 +97,14 @@
                     <th class="col-1" scope="col">Time</th>
                     <th class="col-1" scope="col">Position</th>
                     <th class="col-1" scope="col">Registration</th>
-                    <th scope="col">Delect</th>
+                    <th scope="col">Defect</th>
+                    <th scope="col-3">Notes</th>
                     <th class="col-1" scope="col">S/L</th>
                     <th class="col-1" scope="col">OK</th>
+                    <th class="col-1" scope="col">Action</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody id="table_data">
 
             </tbody>
         </table>
