--- a/main_page.html
+++ b/main_page.html
@@ -80,8 +80,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="reset" id="clear_new_event_button" class="btn btn-danger">Clear</button>
-                        <button type="reset" id="cancel_new_event_button" class="btn btn-secondary"
-                            data-bs-dismiss="modal">Cancel</button>
+                        <button type="reset" id="cancel_new_event_button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                         <button type="submit" id="save_event_button" class="btn btn-primary">Save</button>
                     </div>
                 </form>
