--- a/main_page.html
+++ b/main_page.html
@@ -12,11 +12,11 @@
             width: 1.4em;
             height: 1.4em;
         }
-        .fa-trash-o:hover,.fa-pencil{
+        .fa-trash-o:hover,.fa-save{
             cursor: pointer;
         }
         input[type="text"]{
-            fon
+            text-transform: uppercase;
         }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
@@ -50,7 +50,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Login Form</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">New Event Register</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <form id="new_event_form">
