--- a/main_page.html
+++ b/main_page.html
@@ -92,6 +92,36 @@
     </div>
     <!-- Modals end -->
 
+    <!-- Modal-timer start-->
+    <div class="modal fade" id="timer" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">event reminder</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <form id="event_reminder_form">
+                    <div class="modal-body">
+                        <div class="row">
+                            <div class="col-3">
+                                <input class="form-control mb-3" type="text" name="update_time" placeholder="Time" oninput="formatTime(event)">
+                            </div>
+                            <div class="col-9">
+                                <input class="form-control mb-3" type="text" name="remarks" placeholder="Remarks">
+                            </div>
+                        </div>                        
+                    </div>
+                    <div class="modal-footer">
+                        <button type="reset" id="clear_new_event_button" class="btn btn-danger">Clear</button>
+                        <button type="reset" id="cancel_new_event_button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                        <button type="submit" id="save_event_button" class="btn btn-primary">Save</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <!-- Modal-timer end -->
+
     <div class="container-fluid bg-light text-light">
         <table class="table table-bordered">
             <thead>
