--- a/main_page.html
+++ b/main_page.html
@@ -93,7 +93,7 @@
     <!-- Modals end -->
 
     <!-- Modal-timer start-->
-    <div class="modal fade" id="timer" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="timer" tabindex="-1" aria-labelledby="exampleModalLabel">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
