--- a/index.html
+++ b/index.html
@@ -9,24 +9,27 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
         integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <title>MCC</title>
+    <title>MCC APPLICATION</title>
 </head>
 
 <body>
     <!-- NAVBAR start -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">MCC</a>
+            <a class="navbar-brand" href="#">MCC APPLICATION</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="d-none nav-link" href="#" id="login_link" data-bs-toggle="modal"
+                    <a class="d-none nav-link logged-out" href="#" id="login_link" data-bs-toggle="modal"
                         data-bs-target="#loginModal">Login</a>
-                    <a class="d-none nav-link" href="#" id="register_link" data-bs-toggle="modal"
+                    <a class="d-none nav-link logged-out" href="#" id="register_link" data-bs-toggle="modal"
                         data-bs-target="#registerModal">Signup</a>
+                    <a class="d-none nav-link logged-in" href="#" id="logout_link">Logout</a>
+                    <a class="d-none nav-link logged-in" href="#" id="new_event_link" data-bs-toggle="modal" data-bs-target="#new_event">New
+                        Event</a>
                 </div>
             </div>
         </div>
