--- a/main_page.html
+++ b/main_page.html
@@ -46,11 +46,11 @@
     <!-- NAVBAR end -->
 
     <!-- Modals start-->
-    <div class="modal fade" id="new_event" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="new_event" tabindex="-1" aria-labelledby="newEventModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">New Event Register</h5>
+                    <h5 class="modal-title" id="newEventModalLabel">New Event Register</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <form id="new_event_form">
