--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
         integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <style>
+        table,
+        input[type="checkbox"] {
+            width: 1.4em;
+            height: 1.4em;
+        }
+
+        .fa {
+            cursor: pointer;
+        }
+
+        input[type="text"] {
+            text-transform: uppercase;
+        }
+    </style>
     <title>MCC APPLICATION</title>
 </head>
 
