--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     </div>
     <!-- Timer Modal end -->
 
-    <div class="text-center h2 m-3" id="msg"></div>
+    <!-- <div class="text-center h2 m-3" id="msg"></div> -->
 
     <div class="container-fluid bg-light text-light">
         <table class="table table-bordered">
