--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <!-- <div class="text-center h2 m-3" id="msg"></div> -->
 
     <div class="container-fluid bg-light text-light">
-        <table class="table table-bordered">
+        <table class="table table-bordered d-none">
             <thead>
                 <tr>
                     <th scope="col">Time</th>
