--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </div>
                 <form id="login_form">
                     <div class="modal-body">
-                        <input class="form-control mb-3" type="email" name="email" placeholder="email">
+                        <input class="form-control mb-3" type="email" name="email" placeholder="email" autocomplete="off">
                         <input class="form-control mb-3" type="password" name="password" placeholder="password">
                     </div>
                     <div class="modal-footer">
@@ -86,7 +86,7 @@
                 </div>
                 <form id="register_form">
                     <div class="modal-body">
-                        <input class="form-control mb-3" name="email" type="email" placeholder="email">
+                        <input class="form-control mb-3" name="email" type="email" placeholder="email" autocomplete="off">
                         <input class="form-control mb-3" name="password" type="password" placeholder="password">
                     </div>
                     <div class="modal-footer">
