--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                     <a class="d-none nav-link logged-in" href="#" id="logout_link">Logout</a>
                     <a class="d-none nav-link logged-in" href="#" id="new_event_link" data-bs-toggle="modal"
                         data-bs-target="#new_event">New Event</a>
+                    <a class="d-none nav-link logged-in" href="./so_page.html" id="service_order_link">Service Order</a>
                 </div>
             </div>
         </div>
@@ -146,6 +147,7 @@
         </div>
     </div>
     <!-- New Event Modal end -->
+
 
     <!-- Timer Modal start-->
     <div class="modal fade" id="timer" tabindex="-1" aria-labelledby="reminderModalLabel">
