--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <a class="d-none nav-link logged-in" href="#" id="logout_link">Logout</a>
                     <a class="d-none nav-link logged-in" href="#" id="new_event_link" data-bs-toggle="modal"
                         data-bs-target="#new_event">New Event</a>
-                    <a class="d-none nav-link logged-in" href="./so_page.html" id="service_order_link">Service Order</a>
+                    <a class="d-none nav-link logged-in" href="./so_page.html" target="_blank" id="service_order_link">Service Order</a>
                 </div>
             </div>
         </div>
