--- a/so_page.html
+++ b/so_page.html
@@ -111,7 +111,7 @@
                 <div class="row mb-3">
                     <div class="col-12 ">
                         <label for="so_prepared_test">Prepared text</label>
-                        <textarea class="form-control" id="so_prepared_test"
+                        <textarea class="form-control" name="so_prepared_test" id="so_prepared_test"
                             style="height: 300px"></textarea>
                     </div>
                 </div>
