--- a/so_page.html
+++ b/so_page.html
@@ -8,10 +8,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
-        table,input[type="checkbox"]{
-            width: 1.4em;
-            height: 1.4em;
-        }
         .fa{
             cursor: pointer;
         }
@@ -65,20 +61,23 @@
             
                 <div class="row mb-3">
                     <div class="col">
-                        <input class="form-control" type="text" name="flight" placeholder="FLIGHT">
+                        <input class="form-control" type="text" name="flight" placeholder="FLIGHT" required>
                     </div>
                     <div class="col">
-                        <input class="form-control" type="text" name="from" placeholder="From">
+                        <input class="form-control" type="text" name="from" placeholder="From" required>
                     </div>
                     <div class="col">
-                        <input class="form-control" type="text" name="to" placeholder="TO">
+                        <input class="form-control" type="text" name="to" placeholder="TO" required>
                     </div>
                     <div class="col">
-                        <input class="form-control" type="text" name="eta" placeholder="ETA UTC" oninput="formatTime(event)">
+                        <input class="form-control" type="date" name="date" placeholder="DATE" required>
+                    </div>
+                    <div class="col">
+                        <input class="form-control" type="text" name="eta" placeholder="ETA UTC" oninput="formatTime(event)" required>
                     </div>
                     <div class="col">
                         <select class="form-select" aria-label="Default select example" id="registration">
-                            <option value="false" selected>Select A/C</option>
+                            <option value="" selected>Select A/C</option>
                           </select>
                     </div>
                 </div>
@@ -112,7 +111,7 @@
                     <div class="col-12 ">
                         <label for="so_prepared_test">Prepared text</label>
                         <textarea class="form-control" name="so_prepared_test" id="so_prepared_test"
-                            style="height: 300px"></textarea>
+                            style="height: 500px"></textarea>
                     </div>
                 </div>
             </div>
