--- a/html/so_page.html
+++ b/html/so_page.html
@@ -119,7 +119,7 @@
             <div class="container">
                 <div class="row g-5">
                     <div class="col-6 text-end">
-                    <button type="submit" class="btn btn-success">Prepare</button>
+                    <button type="submit" class="btn btn-success">Prepare & Copy</button>
                   </div>
                     <div class="col-6 text-start">
                     <button type="reset" class="btn btn-danger">Clear</button>
@@ -142,8 +142,8 @@
     <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
-    <script defer src="./js/init_FB.js"></script>
-    <script defer src="./js/so_page.js"></script>
+    <script defer src="/js/init_FB.js"></script>
+    <script defer src="/js/so_page.js"></script>
 </body>
 
 </html>
