--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
             width: 1.4em;
             height: 1.4em;
         }
-
         .fa {
             cursor: pointer;
         }
@@ -46,8 +45,8 @@
                     <a class="d-none nav-link logged-in" href="#" id="logout_link">Logout</a>
                     <a class="d-none nav-link logged-in" href="#" id="new_event_link" data-bs-toggle="modal"
                         data-bs-target="#new_event">New Event</a>
-                    <a class="d-none nav-link logged-in" href="./html/so_page.html" target="_blank" id="service_order_link">Service Order</a>
-                    <a class="d-none nav-link logged-in" href="./aircraft_admin.html" target="_blank" id="aircraft_admin_link">A/C Admin</a>
+                    <a class="d-none nav-link logged-in" href="/html/so_page.html" target="_blank" id="service_order_link">Service Order</a>
+                    <a class="d-none nav-link logged-in" href="/html/aircraft_admin.html" target="_blank" id="aircraft_admin_link">A/C Admin</a>
                 </div>
             </div>
         </div>
