--- a/html/aircraft_admin.html
+++ b/html/aircraft_admin.html
@@ -120,20 +120,25 @@
     </div>
     <!-- New Aircraft Modal end -->
 
+    <br>
 
     <div class="container-fluid bg-light text-light">
-        <table class="table table-bordered d-none">
+        <table class="table table-bordered">
             <thead>
                 <tr>
-                    <th scope="col">Time</th>
-                    <th scope="col">Position</th>
-                    <th scope="col">Registration</th>
-                    <th class="col-4" scope="col">Defect</th>
-                    <th class="col-4" scope="col">Notes</th>
-                    <th scope="col">S/L</th>fdg
-                    <th scope="col">RESET</th>
-                    <th scope="col">OK</th>
-                    <th scope="col">Action</th>
+                    <th scope="col">Reg.</th>
+                    <th scope="col">Type</th>
+                    <th scope="col">MSN</th>
+                    <th scope="col">Effec.</th>
+                    <th scope="col">Engine</th>
+                    <th scope="col">Date Rec.</th>
+                    <th scope="col">SELCAL</th>
+                    <th scope="col">WV</th>
+                    <th scope="col">Notes</th>
+                    <th scope="col">CLS</th>fdg
+                    <th scope="col">WIFI</th>
+                    <th scope="col">Active</th>
+                    <th scope="col">Actions</th>
                 </tr>
             </thead>
             <tbody id="table_data">
