--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                     <a class="d-none nav-link logged-in" href="#" id="logout_link">Logout</a>
                     <a class="d-none nav-link logged-in" href="#" id="new_event_link" data-bs-toggle="modal"
                         data-bs-target="#new_event">New Event</a>
-                    <a class="d-none nav-link logged-in" href="/html/so_page.html" target="_blank" id="service_order_link">Service Order</a>
-                    <a class="d-none nav-link logged-in" href="/html/aircraft_admin.html" target="_blank" id="aircraft_admin_link">A/C Admin</a>
+                    <a class="d-none nav-link logged-in" href="html/so_page.html" target="_blank" id="service_order_link">Service Order</a>
+                    <a class="d-none nav-link logged-in" href="html/aircraft_admin.html" target="_blank" id="aircraft_admin_link">A/C Admin</a>
                 </div>
             </div>
         </div>
@@ -217,9 +217,9 @@
     <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
-    <script defer src="/js/init_FB.js"></script>
-    <script defer src="/js/auth.js"></script>
-    <script defer src="/js/FB_functions.js"></script>
+    <script defer src="js/init_FB.js"></script>
+    <script defer src="js/auth.js"></script>
+    <script defer src="js/FB_functions.js"></script>
 </body>
 
 </html>
