--- a/html/aircraft_admin.html
+++ b/html/aircraft_admin.html
@@ -159,8 +159,8 @@
     <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
-    <script defer src="/js/init_FB.js"></script>
-    <script defer src="/js/aircraft_admin.js"></script>
+    <script defer src="../js/init_FB.js"></script>
+    <script defer src="../js/aircraft_admin.js"></script>
 </body>
 
 </html>
