--- a/html/so_page.html
+++ b/html/so_page.html
@@ -55,27 +55,33 @@
                         <label class="form-check-label" for="rb_maint">MAINT. ACTION</label>
                     </div>
                 </div>
-            
                 <div class="row mb-3">
-                    <div class="col">
-                        <input class="form-control" type="text" name="flight" placeholder="FLIGHT" required>
-                    </div>
-                    <div class="col">
-                        <input class="form-control" type="text" name="from" placeholder="From" required>
-                    </div>
-                    <div class="col">
-                        <input class="form-control" type="text" name="to" placeholder="TO" required>
-                    </div>
-                    <div class="col">
-                        <input class="form-control" type="date" name="date" placeholder="DATE" required>
-                    </div>
-                    <div class="col">
-                        <input class="form-control" type="text" name="eta" placeholder="ETA UTC" oninput="formatTime(event)" required>
-                    </div>
                     <div class="col">
                         <select class="form-select" aria-label="Default select example" id="registration">
                             <option value="" selected>Select A/C</option>
-                          </select>
+                        </select>
+                    </div>
+                    <div class="col">
+                        <input class="form-control" type="text" name="flight" placeholder="FLIGHT" autocomplete="off" required>
+                    </div>
+                    <div class="col">
+                        <input class="form-control" type="text" name="from" placeholder="From" autocomplete="off" required>
+                    </div>
+                    <div class="col">
+                        <input class="form-control" type="text" name="to" placeholder="TO" autocomplete="off" required>
+                    </div>
+                    <div class="col">
+                        <input class="form-control" type="text" name="date" placeholder="DATE" oninput="validateDate(this)" required>
+                    </div>
+                    <!-- <div class="col">
+                        <input class="form-control" type="date" name="date" placeholder="DATE" required>
+                    </div> -->
+                    <div class="col">
+                        <input class="form-control" type="text" name="eta" placeholder="ETA UTC" autocomplete="off" oninput="formatTime(event)" required>
+                    </div>
+                    <div class="col" style="font-size: 1.2rem;">
+                        <input class="form-check-input mb-3" type="checkbox" name="landed" id="landed" oninput="set_eta_type(event)">
+                        <label class="form-check-label" for="landed">At Dest. Airport</label>
                     </div>
                 </div>
             </div>
@@ -85,7 +91,7 @@
             <div class="container" id="pirep_defect">
                 <div class="row">
                     <div class="col-12">
-                        <input class="form-control mb-3" type="text" name="defect" placeholder="Defect description">
+                        <input class="form-control mb-3" type="text" name="defect" placeholder="Defect description" autocomplete="off">
                     </div>
                 </div>
             </div>
@@ -95,10 +101,10 @@
             <div class="container d-none" id="maintenance_action">
                 <div class="row">
                     <div class="col-3">
-                        <input class="form-control mb-3" type="text" name="mel" placeholder="MEL">
+                        <input class="form-control mb-3" type="text" name="mel" placeholder="MEL" autocomplete="off">
                     </div>
                     <div class="col-9">
-                        <input class="form-control mb-3" type="text" name="mel_description" placeholder="MEL Description">
+                        <input class="form-control mb-3" type="text" name="mel_description" placeholder="MEL Description" autocomplete="off">
                     </div>
                 </div>
             </div>
@@ -139,8 +145,8 @@
     <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
-    <script defer src="/js/init_FB.js"></script>
-    <script defer src="/js/so_page.js"></script>
+    <script defer src="../js/init_FB.js"></script>
+    <script defer src="../js/so_page.js"></script>
 </body>
 
 </html>
