--- a/html/so_page.html
+++ b/html/so_page.html
@@ -112,8 +112,8 @@
             <div class="container">
                 <div class="row mb-3">
                     <div class="col-12 ">
-                        <label for="so_prepared_test">Prepared text</label>
-                        <textarea class="form-control" name="so_prepared_test" id="so_prepared_test"
+                        <label for="so_prepared_text">Prepared text</label>
+                        <textarea class="form-control" name="so_prepared_text" id="so_prepared_text"
                             style="height: 500px"></textarea>
                     </div>
                 </div>
@@ -146,6 +146,7 @@
     <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
     <script defer src="../js/init_FB.js"></script>
+    <script defer src="../js/fetch_data_from_db.js"></script>
     <script defer src="../js/so_page.js"></script>
 </body>
 
